--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <a class="navbar-brand" href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img class="navlogo"
+              <a class="navbar-brand hidden3" href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img class="navlogo"
                   src="assets/navlogo.png" alt="Lay's logo"></a>
             </div>
             <div class="offcanvas-body">
@@ -154,7 +154,7 @@
                 </button>
               </form>
               <div class="closediv">
-                <button type="button" class="btn-close closecanvas" data-bs-dismiss="offcanvas"
+                <button type="button" class="btn-close closecanvas hidden3" data-bs-dismiss="offcanvas"
                   aria-label="Close"></button>
               </div>
             </div>
@@ -378,7 +378,7 @@
       </div>
       <div class="carousel-inner carouselinner">
         <div class="carousel-item active">
-          <img src="assets/recipe1.png" class="d-block w-100  posteritem hidden2" alt="recipe1">
+          <a href="https://www.lays.com/recipes/lay-s-potato-chip-magic-bars" target="_blank"><img src="assets/recipe1.png" class="d-block w-100  posteritem hidden2" alt="recipe1"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Potato Chip Magic Bars ⭐4.3/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-potato-chip-magic-bars" target="_blank"><button type="button"
@@ -390,7 +390,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/recipe2.png" class="d-block w-100  posteritem hidden2" alt="recipe2">
+          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-spicy-chicken-sandwich" target="_blank"><img src="assets/recipe2.png" class="d-block w-100  posteritem hidden2" alt="recipe2"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Hot Spicy Chicken Sandwich ⭐3.5/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-flamin-hot-spicy-chicken-sandwich" target="_blank"></a><button
@@ -403,7 +403,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/recipe3.png" class="d-block w-100  posteritem hidden2" alt="recipe3">
+          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-dill-pickle-crusted-pickles" target="_blank"><img src="assets/recipe3.png" class="d-block w-100  posteritem hidden2" alt="recipe3"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Hot Dill Crusted Pickles ⭐4.1/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-flamin-hot-dill-pickle-crusted-pickles" target="_blank"><button
@@ -416,7 +416,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/recipe4.png" class="d-block w-100  posteritem hidden2" alt="recipe4">
+          <a href="https://www.lays.com/recipes/lay-s-wavy-meet-jalape-o-popper-dip" target="_blank"><img src="assets/recipe4.png" class="d-block w-100  posteritem hidden2" alt="recipe4"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Wavy Jalapeño Popper Dip ⭐4.9/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-wavy-meet-jalape-o-popper-dip" target="_blank"><button
@@ -429,7 +429,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/recipe5.png" class="d-block w-100  posteritem hidden2" alt="recipe5">
+          <a href="https://www.lays.com/recipes/lay-s-ice-cream-sandwiches" target="_blank"><img src="assets/recipe5.png" class="d-block w-100  posteritem hidden2" alt="recipe5"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 style="color: black;" class="hidden2">LAY’S Ice Cream Sandwiches ⭐2.9/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-ice-cream-sandwiches" target="_blank"><button type="button"
@@ -662,5 +662,4 @@
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
