--- a/index.html
+++ b/index.html
@@ -528,11 +528,11 @@
           </div>
         </div>
         <div class="carousel-inner carouselinner">
-          <div class="carousel-item active"><a draggable="false" href="https://www.instagram.com/lays/"
+          <div class="carousel-item active"><a draggable="false" href="https://twitter.com/lays/"
               target="_blank"><img src="assets/post1.jpg" draggable="false" class="d-block w-100 postitem"
                 alt="post1"></a>
           </div>
-          <div class="carousel-item"><a draggable="false" href="https://twitter.com/lays/" target="_blank"><img
+          <div class="carousel-item"><a draggable="false" href="https://www.instagram.com/lays/" target="_blank"><img
                 src="assets/post2.jpg" class="d-block w-100 postitem" draggable="false" alt="post2"></a>
           </div>
           <div class="carousel-item">
