--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <span class="navbar-toggler-icon"></span>
           </button> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="" role="button"><i class="fa fa-bars" aria-hidden="true" style="color:red"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -108,8 +108,8 @@
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <a class="navbar-brand hidden3" href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img class="navlogo"
-                  src="assets/navlogo.png" alt="Lay's logo"></a>
+              <a class="navbar-brand hidden3" href="https://mohammad-sarfaraz-afzal.github.io/Lays/"><img
+                  class="navlogo" src="assets/navlogo.png" alt="Lay's logo"></a>
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -378,7 +378,8 @@
       </div>
       <div class="carousel-inner carouselinner">
         <div class="carousel-item active">
-          <a href="https://www.lays.com/recipes/lay-s-potato-chip-magic-bars" target="_blank"><img src="assets/recipe1.png" class="d-block w-100  posteritem hidden2" alt="recipe1"></a>
+          <a href="https://www.lays.com/recipes/lay-s-potato-chip-magic-bars" target="_blank"><img
+              src="assets/recipe1.png" class="d-block w-100  posteritem hidden2" alt="recipe1"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Potato Chip Magic Bars ⭐4.3/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-potato-chip-magic-bars" target="_blank"><button type="button"
@@ -390,7 +391,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-spicy-chicken-sandwich" target="_blank"><img src="assets/recipe2.png" class="d-block w-100  posteritem hidden2" alt="recipe2"></a>
+          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-spicy-chicken-sandwich" target="_blank"><img
+              src="assets/recipe2.png" class="d-block w-100  posteritem hidden2" alt="recipe2"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Hot Spicy Chicken Sandwich ⭐3.5/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-flamin-hot-spicy-chicken-sandwich" target="_blank"></a><button
@@ -403,7 +405,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-dill-pickle-crusted-pickles" target="_blank"><img src="assets/recipe3.png" class="d-block w-100  posteritem hidden2" alt="recipe3"></a>
+          <a href="https://www.lays.com/recipes/lay-s-flamin-hot-dill-pickle-crusted-pickles" target="_blank"><img
+              src="assets/recipe3.png" class="d-block w-100  posteritem hidden2" alt="recipe3"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Hot Dill Crusted Pickles ⭐4.1/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-flamin-hot-dill-pickle-crusted-pickles" target="_blank"><button
@@ -416,7 +419,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="https://www.lays.com/recipes/lay-s-wavy-meet-jalape-o-popper-dip" target="_blank"><img src="assets/recipe4.png" class="d-block w-100  posteritem hidden2" alt="recipe4"></a>
+          <a href="https://www.lays.com/recipes/lay-s-wavy-meet-jalape-o-popper-dip" target="_blank"><img
+              src="assets/recipe4.png" class="d-block w-100  posteritem hidden2" alt="recipe4"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 class="hidden2" style="color: black;">LAY’S Wavy Jalapeño Popper Dip ⭐4.9/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-wavy-meet-jalape-o-popper-dip" target="_blank"><button
@@ -429,7 +433,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="https://www.lays.com/recipes/lay-s-ice-cream-sandwiches" target="_blank"><img src="assets/recipe5.png" class="d-block w-100  posteritem hidden2" alt="recipe5"></a>
+          <a href="https://www.lays.com/recipes/lay-s-ice-cream-sandwiches" target="_blank"><img
+              src="assets/recipe5.png" class="d-block w-100  posteritem hidden2" alt="recipe5"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5 style="color: black;" class="hidden2">LAY’S Ice Cream Sandwiches ⭐2.9/5</h5>
             <a href="https://www.lays.com/recipes/lay-s-ice-cream-sandwiches" target="_blank"><button type="button"
@@ -528,9 +533,8 @@
           </div>
         </div>
         <div class="carousel-inner carouselinner">
-          <div class="carousel-item active"><a draggable="false" href="https://twitter.com/lays/"
-              target="_blank"><img src="assets/post1.jpg" draggable="false" class="d-block w-100 postitem"
-                alt="post1"></a>
+          <div class="carousel-item active"><a draggable="false" href="https://twitter.com/lays/" target="_blank"><img
+                src="assets/post1.jpg" draggable="false" class="d-block w-100 postitem" alt="post1"></a>
           </div>
           <div class="carousel-item"><a draggable="false" href="https://www.instagram.com/lays/" target="_blank"><img
                 src="assets/post2.jpg" class="d-block w-100 postitem" draggable="false" alt="post2"></a>
@@ -585,8 +589,7 @@
   <div class="footer hidden7">
     <div class="footerelements">
       <div class="footflex">
-        <a href="#ott"><img class="navlogo mnavlogo" src="assets/navlogo.png"
-            alt="Lay's logo"></a>
+        <a href="#ott"><img class="navlogo mnavlogo" src="assets/navlogo.png" alt="Lay's logo"></a>
         <div class="btn-group dropup">
           <button type="button" class="btn btn-outline-danger cbutton1 dropdown-toggle" data-bs-toggle="dropdown"
             aria-expanded="false" data-bs-auto-close="outside">
@@ -635,7 +638,7 @@
             <path
               d="M512 64c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 78.3 364 32 448 32h32c17.7 0 32 14.3 32 32zM0 128c0-17.7 14.3-32 32-32H64c123.7 0 224 100.3 224 224v32 96c0 17.7-14.3 32-32 32s-32-14.3-32-32V352C100.3 352 0 251.7 0 128z" />
           </svg>PepsiCo Foodservice</button>
-        <button type="button" class="btn btn-outline-danger cbutton1"><svg class="videoicon"
+        <button type="button" class="btn btn-outline-danger cbutton1 accesibilitystm"><svg class="videoicon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
             <path
@@ -662,4 +665,5 @@
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
