--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- The site is for educational purposes only. Fair Use Copyright Disclaimer under section 107 of the Copyright Act of 1976, allowance is made for “fair use” for purposes such as criticism, comment, news reporting, teaching, scholarship, education and research. -->
+<!-- © Copyright Pious Boys India, All rights reserved. -->
+<!-- Developed by https://github.com/MOHAMMAD-SARFARAZ-AFZAL/ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -663,7 +666,7 @@
         </div>
       </div>
       <div style="background-color: #ffe63f;" class="cc">
-        <h6 class="trademark">© 2023 Pious Boys India, All rights reserved.</h6>
+        <h6 class="trademark">© Copyright Pious Boys India, All rights reserved.</h6>
       </div>
     </div>
   </div>
